feat: add update gopher feature
